vue component and a lot changes

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>beinthatday</title>
+    <link rel="stylesheet" type="text/css" href="/libs/semantic/semantic.css">
+    <link href="/libs/quill/quill.core.css" rel="stylesheet">
+    <link href="/libs/quill/quill.snow.css" rel="stylesheet">
     <script src="/libs/vue/vue.js" charset="utf-8"></script>
     <script src="/libs/vue/vue-resource.js" charset="utf-8"></script>
     <script src="/libs/vue/vue-router.js" charset="utf-8"></script>
+    <script src="/libs/validator/validator.js" charset="utf-8"></script>
     <script src="/libs/utils/utils.js" charset="utf-8"></script>
     <script type="text/javascript">
       var Bus = new Vue();
     </script>
+    <script src="/libs/jquery/jquery.js"></script>
+    <script src="/libs/semantic/semantic.js"></script>
+    <script src="/libs/quill/quill.core.js"></script>
+    <script src="/libs/quill/quill.js"></script>
   </head>
   <body>
     <div id="app">
