--- a/webpacks/index.html
+++ b/webpacks/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <title>beinthatday</title>
     <link rel="stylesheet" type="text/css" href="/libs/semantic/semantic.css">
     <link href="/libs/quill/quill.core.css" rel="stylesheet">
@@ -19,12 +20,14 @@
     <script src="/libs/semantic/semantic.js"></script>
     <script src="/libs/quill/quill.core.js"></script>
     <script src="/libs/quill/quill.js"></script>
+    <script src="/libs/xss/xss.js"></script>
+    <script src="/libs/socket.io/socket.io.js"></script>
     <style type="text/css">
       img.ui.image:not([src]){
-        content: url('http://localhost:3000/assets/default_avatar.png');
+        content: url('/assets/default_avatar.png');
       }
       .avatar img:not([src]){
-        content: url('http://localhost:3000/assets/default_avatar.png');
+        content: url('/assets/default_avatar.png');
       }
       html,body {
         height: 100%;
@@ -54,17 +57,29 @@
         left: 0;
         bottom: 0;
       }
+      .upper {
+        background-color: #2185D0;
+      }
       .upper .indextreat {
         border-radius:0px;
         height: 100%;
       }
-      .upper .indexlogin {
-        padding: 0px 12px 0px 0px;
+      .upper .indexright {
         position: absolute;
         right: 0;
         top: 0;
         z-index: 2;
+      }
+      .upper .indexlogin {
+        padding: 0px 12px 0px 0px;
         color: #fff;
+        float: right;
+      }
+      .upper .indexmessage {
+        padding: 10px 10px 0px 0px;
+        float: right;
+        color: #fff;
+        height: 2.7em;
       }
       .upper .ui.button.homeicon {
         padding: 8px 0px 0px 20px;
@@ -72,8 +87,57 @@
         left: 0;
         top: 0;
         z-index: 2;
-        width: 8em;
         height: 2.7em;
+        border-radius: 0px;
+      }
+      /*computer*/
+      @media only screen and (min-width: 768px) {
+        .indextreat.bottomed {
+          display: none !important;
+        }
+        .upper .indexsearch.computershow {
+          display: flex;
+          padding: 0px 0px 0px 0px;
+          float: left;
+          color: #fff;
+          height: 2.7em;
+        }
+        .upper .indexsearch.mobileshow {
+          display: none;
+        }
+        .upper .ui.button.homeicon {
+          width: 8em;
+        }
+      }
+      /*mobile*/
+      @media only screen and (max-width: 768px){
+        .upper .indexsearch.computershow {
+          display: none;
+        }
+        .upper .indexsearch.mobileshow {
+          display: inline;;
+          float: left;
+          height: 2.7em;
+          width: 2.7em;
+          padding: 0.6em 0.4em 0em 0em;
+        }
+        .upper .indextreat {
+          display: none !important;
+        }
+        .indextreat.bottomed {
+          display: block;
+          border-radius:0px;
+          position:fixed;;
+          bottom:0;
+          left:0;
+          width: 100%;
+        }
+        .indextreat.bottomed div {
+          border-radius:0px;
+        }
+        .upper .ui.button.homeicon {
+          width: 4.8em;
+        }
       }
     </style>
   </head>
@@ -85,7 +149,15 @@
           <div class="hidden content">Home</div>
         </div>
         <app-treat  class="indextreat fluid"></app-treat>
-        <app-login  class="indexlogin"></app-login>
+        <div class="indexright">
+          <i class="search icon inverted indexsearch mobileshow" @click="goSearch"></i>
+          <div class="ui left icon input transparent inverted indexsearch computershow" @click="goSearch">
+            <i class="search icon"></i>
+            <input placeholder="Search Activitys..." readonly="readonly">
+          </div>
+          <app-login  class="indexlogin"></app-login>
+          <app-message class="indexmessage"></app-message>
+        </div>
       </div>
       <div class="container">
         <keep-alive>
@@ -94,6 +166,9 @@
       </div>
       <div class="footer">
         🎊 welcome! 🎉
+      </div>
+      <div class="indextreat bottomed">
+        <app-treat  class="fluid"></app-treat>
       </div>
     </div>
     <script src="main.js" charset="utf-8"></script>
